# fastapi-recipe

client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx  client.js  config.js  index.css
client/src/components/: Loader.jsx
client/src/components/Button/: Button.jsx
client/src/components/DashboardHeader/: index.jsx
client/src/components/Footer/: index.jsx
client/src/components/FormInput/: FormInput.jsx
client/src/components/Idea/: index.jsx
client/src/components/IdeaTable/: index.jsx
client/src/components/Modal/: PopupModal.jsx
client/src/components/Recipe/: index.jsx
client/src/components/RecipeTable/: index.jsx
client/src/pages/error-page/: index.jsx
client/src/pages/home/: index.jsx
client/src/pages/login/: index.jsx
server/: .gitignore  README.md  alembic.ini  example.db  pyproject.toml  run.sh
server/app/: backend_pre_start.py  initial_data.py  main.py  recipe_data.py
server/app/api/api_v1/: __init__.py
server/app/api/api_v1/endpoints/: auth.py  recipe.py
server/app/core/: auth.py  config.py  dependencies.py  reddit_client.py  security.py
server/app/crud/: base.py  crud_user.py
server/app/db/: base.py  init_db.py  session.py
server/app/models/: user.py
server/app/schemas/: __init__.py  recipe.py  token.py  user.py
server/app/templates/: index.html
server/migrations/: env.py
server/migrations/versions/: 21c5c58fbd87_initial_migration.py  730ab4143c14_add_authentication.py
server/tests/: conftest.py
server/tests/api/: test_recipe.py
(+3 files in other folders)
