[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI tutorial"
authors = ["devadonis <devadonis00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
python-multipart = "^0.0.6"
pydantic = {version = "^2.4.2", extras = ["email"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
