[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI tutorial"
authors = ["devadonis <devadonis00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.103.2"
python-multipart = "^0.0.6"
pydantic = {version = "^2.4.2", extras = ["email"]}
jinja2 = "^3.1.2"
gunicorn = "^21.2.0"
alembic = "^1.12.0"
tenacity = "^8.2.3"
greenlet = "^3.0.0"
sqlalchemy = "^2.0.22"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
cffi = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
